Wordwrap headers to prevent empty space on the right-hand side.

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -138,7 +138,11 @@ main blockquote {
 	font-style: italic;
 }
 
-main code {
+main section code,
+main section h1,
+main section h2,
+main section h3,
+main section h4 {
 	word-wrap: break-word;
 }
 
